--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/mac.jpg");
+  background-image: url("bangladesh-background.jpeg");
   min-height: 100%;
 }
 
@@ -34,10 +34,10 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide">LOGO</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About Us</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i>Philosophy</a>
-      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i>Bangladesh</a>
-      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="#about" class="w3-bar-item w3-button">Philosophy </a>
+      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> About Us</a>
+      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> Investing in Bangladesh</a>
+      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> Contact</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -59,10 +59,10 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
-    <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+    <span class="w3-jumbo w3-hide-small">GreenBridge Capital</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">GreenBridge Capital</span><br>
+    <span class="w3-large">Connecting capital to building Bangladesh</span>
+    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Contact us today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
